[package]
name = "transaction-resolution"
version = "0.1.0"
authors = ["Soleh Ruziboev <solehjon.ruziboev@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
csv = "1.1.6"
serde = { version = "1.0.137" , features = ["derive"] }
maplit = "1.0.2"
tokio = { version = "1.19.2", features = ["full"] }
anyhow = "1.0.57"
